crates/forge_app/src/snapshots/forge_app__operation__tests__attempt_completion_all_tasks_done_can_execute_true.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<success>[Task was completed successfully. Now wait for user feedback]</success>
