crates/forge_app/src/snapshots/forge_app__operation__tests__attempt_completion_with_pending_tasks_can_execute_true.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<success>[Task was completed successfully. Now continue with the next task]
<task
  id="1"
  status="PENDING"
>First task
</task>
<info>On task completion mark it as done</info>
</success>
