crates/forge_app/src/snapshots/forge_app__operation__tests__codebase_search_with_relevance_query.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<codebase_search_results>
<query
  value="authentication logic"
  relevance_query="need to add similar auth to my endpoint"
>
<file_chunk
  file_path="src/auth.rs"
  lines="10-12"
><![CDATA[fn authenticate_user(token: &str) -> Result<User> {
    verify_jwt(token)
}]]>
</file_chunk>
</query>
</codebase_search_results>
