crates/forge_app/src/snapshots/forge_app__operation__tests__codebase_search_with_results.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<codebase_search_results>
<query
  value="retry mechanism with exponential backoff"
>
<file_chunk
  file_path="src/retry.rs"
  lines="10-19"
><![CDATA[fn retry_with_backoff(max_attempts: u32) {
    let mut delay = 100;
    for attempt in 0..max_attempts {
        if try_operation().is_ok() {
            return;
        }
        thread::sleep(Duration::from_millis(delay));
        delay *= 2;
    }
}]]>
</file_chunk>
<file_chunk
  file_path="src/http/client.rs"
  lines="45-50"
><![CDATA[async fn request_with_retry(&self, url: &str) -> Result<Response> {
    const MAX_RETRIES: usize = 3;
    let mut backoff = ExponentialBackoff::default();
    // Implementation...
}]]>
</file_chunk>
</query>
</codebase_search_results>
