crates/forge_app/src/snapshots/forge_app__operation__tests__codebase_search_with_usecase.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<codebase_search_results
  query="authentication logic"
  use_case="need to add similar auth to my endpoint"
  results="1"
>
<file_chunk
  file_path="src/auth.rs"
  lines="10-12"
><![CDATA[fn authenticate_user(token: &str) -> Result<User> {
    verify_jwt(token)
}]]>
</file_chunk>
</codebase_search_results>
