crates/forge_app/src/snapshots/forge_app__operation__tests__follow_up_no_question.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Interrupted

No feedback provided
