crates/forge_app/src/snapshots/forge_app__operation__tests__fs_create_basic.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<file_created
  path="/home/user/new_file.txt"
  total_lines="1"
>
</file_created>
File diff for: /home/user/new_file.txt
