crates/forge_app/src/snapshots/forge_app__operation__tests__fs_create_with_warning.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<file_created
  path="/home/user/file_with_warning.txt"
  total_lines="1"
>
<warning>File created in non-standard location</warning>
</file_created>
